--- a/css/styles.css
+++ b/css/styles.css
@@ -196,22 +196,43 @@ body {
   color: var(--color-ocean);
 }
 
+
 @media only screen and (min-width: 1158px) {
   .contact-link {
-    display: block;
     padding-top: 24px;
     padding-bottom: 24px;
   }
 }
 
 .mail-contact {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
   margin-bottom: 12px;
 }
 
 @media only screen and (min-width: 1158px) {
   .mail-contact {
+    display: block;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     margin-bottom: 0px;
     margin-right: 40px;
+  }
+}
+
+.phone-contact{
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+
+@media only screen and (min-width: 1158px){
+  .phone-contact {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   }
 }
 
@@ -231,13 +252,13 @@ body {
 }
 
 @media only screen and (min-width: 768px) {
-  .logo {
+  .logo-header {
     margin-right: 120px;
   }
 }
 
 @media only screen and (min-width: 1158px) {
-  .logo {
+  .logo-header{
     margin-right: 76px;
   }
 }
@@ -269,11 +290,18 @@ body {
   max-width: 1440px;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 112px;
+  padding-bottom: 112px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+@media only screen and (min-width: 1158px){
+  .hero-section{
+    padding-top: 188px;
+    padding-bottom: 188px;
+  }
 }
 
 @media only screen and (max-width: 428px) {
@@ -444,8 +472,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 
-  padding: 72px 24px 24px;
-  width: 408px;
+  width: 392px;
   background-color: var(--color-dairy);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -460,10 +487,17 @@ body {
   }
 }
 
-@media only screen and (min-width: 320px) and (max-width: 1157px){
+@media only screen and (min-width: 320px) and (max-width: 767px){
   .modal{
-    max-height: 90vh;
+    padding: 72px 16px 24px 25px;
     overflow-y: scroll;
+  }
+}
+
+@media only screen and (min-width: 768px){
+  .modal{
+    width: 408px;
+    padding: 72px 25px 24px 23px;
   }
 }
 
@@ -526,6 +560,11 @@ body {
   margin-bottom: 8px;
 }
 
+.modal-form-text{
+  display: block;
+  margin-bottom: 16px;
+}
+
 .modal-form-input {
   width: 100%;
   height: 40px;
@@ -563,7 +602,6 @@ body {
   min-height: 120px;
   resize: none;
   padding: 8px 16px;
-  margin-bottom: 16px;
 
   font-size: 12px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -981,6 +1019,7 @@ body {
 
 @media only screen and (min-width: 768px) {
   .clients-list {
+    justify-content: center;
     row-gap: var(--indent-1);
     column-gap: var(--indent);
   }
@@ -993,15 +1032,13 @@ body {
 }
 
 .clients-item {
-  display: flex;
   width: calc((100% - 16px) / 2);
   height: 88px;
-  justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
   .clients-item {
-    width: calc((100% - 48px) / 3);
+    width: calc((100% - 232px) / 3);
   }
 }
 
@@ -1051,10 +1088,15 @@ body {
     padding-bottom: 100px;
   }
 }
+
+.logo-footer{
+  display: block;
+  margin-bottom: 16px;
+}
+
 @media only screen and (max-width: 767px) {
   .logo-footer {
     display: block;
-    margin-bottom: 16px;
     text-align: center;
   }
 }
@@ -1152,7 +1194,6 @@ body {
 @media only screen and (min-width: 768px) {
   .footer-email {
     width: 264px;
-    margin-right: 24px;
   }
 }
 
@@ -1168,6 +1209,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: var(--indent);
   }
 }
 
@@ -1320,7 +1362,7 @@ input::placeholder {
   background-color: transparent;
   cursor: pointer;
   border: none;
-  outline: none;
+
   height: 22px;
 }
 
